# ftx-fetch

./: Cargo.toml  LICENSE  README.md
src/: main.rs
