[package]
name = "ftx-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
ftx = "0.5"
chrono = "0.4"
tokio = { version = "1.20.0", features = ["full"] }
clap = { version = "3.2.14", features = ["derive"] }
prettytable-rs = "0.8"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
