[package]
name = "ftx-fetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftx = "0.5"
chrono = "0.4"
tokio = { version = "1.20.0", features = ["full"] }
clap = { version = "3.2.14", features = ["derive"] }
prettytable-rs = "0.8"
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
log = "0.4"
pretty_env_logger = "0.4"
csv = "1.1"
thiserror = "1.0"
